toolchain/chidori-static-analysis/src/language/python/snapshots/chidori_static_analysis__language__python__parse__tests__extraction_of_ch_statements.snap
---
source: chidori-static-analysis/src/language/python/parse.rs
expression: context_stack_references
---
- - InCallExpression
  - Constant: default
- - InCallExpression
  - Constant: default
  - InCallExpression
  - Constant: openai
- - InCallExpression
  - Constant: default
  - InCallExpression
  - Constant: openai
  - Attribute: llm
  - IdentifierReferredTo:
      - ch
      - false
- - InCallExpression
  - Constant: default
  - Attribute: configure
  - Attribute: prompt
  - IdentifierReferredTo:
      - ch
      - false
