toolchain/chidori-static-analysis/src/language/python/snapshots/chidori_static_analysis__language__python__parse__tests__function_decorator_ch_annotation.snap
---
source: chidori-static-analysis/src/language/python/parse.rs
description: "@ch.register()\ndef migration_agent():\n    ch.set(\"bar\", 1)\n"
---
- - InFunction: migration_agent
- - InFunction: migration_agent
  - InFunctionDecorator: 0
  - InCallExpression
  - Attribute: register
  - IdentifierReferredTo:
      - ch
      - false
- - InFunction: migration_agent
  - InCallExpression
  - Constant: bar
- - InFunction: migration_agent
  - InCallExpression
  - Constant: bar
  - Attribute: set
  - IdentifierReferredTo:
      - ch
      - false
