toolchain/chidori-static-analysis/src/language/python/snapshots/chidori_static_analysis__language__python__parse__tests__pipe_function_composition.snap
---
source: chidori-static-analysis/src/language/python/parse.rs
description: "def main():\n    bar() | foo() | baz()\n"
---
- - InFunction:
      - main
      - start: 0
        end: 37
- - InFunction:
      - main
      - start: 0
        end: 37
  - InCallExpression
  - IdentifierReferredTo:
      - bar
      - false
- - InFunction:
      - main
      - start: 0
        end: 37
  - InCallExpression
  - IdentifierReferredTo:
      - foo
      - false
- - InFunction:
      - main
      - start: 0
        end: 37
  - InCallExpression
  - IdentifierReferredTo:
      - baz
      - false
