toolchain/chidori-static-analysis/src/language/python/snapshots/chidori_static_analysis__language__python__parse__tests__reference_to_undeclared_function.snap
---
source: chidori-static-analysis/src/language/python/parse.rs
description: "out = await read_file_and_load_to_memory(\"./\")\n"
---
- - AssignmentToStatement
  - IdentifierReferredTo:
      - out
      - false
- - AssignmentFromStatement
  - InCallExpression
  - Constant: "./"
- - AssignmentFromStatement
  - InCallExpression
  - Constant: "./"
  - IdentifierReferredTo:
      - read_file_and_load_to_memory
      - false
