toolchain/chidori-static-analysis/src/language/python/snapshots/chidori_static_analysis__language__python__parse__tests__report_generation.snap
---
source: chidori-static-analysis/src/language/python/parse.rs
description: "@ch.on_event(\"new_file\")\n@ch.emit_as(\"file_created\")\ndef testing():\n    x = 2 + y\n    return x\n    "
---
- - InFunction:
      - testing
      - start: 53
        end: 94
- - InFunction:
      - testing
      - start: 53
        end: 94
  - InFunctionDecorator: 0
  - InCallExpression
  - Constant: new_file
- - InFunction:
      - testing
      - start: 53
        end: 94
  - InFunctionDecorator: 0
  - InCallExpression
  - Constant: new_file
  - Attribute: on_event
  - IdentifierReferredTo:
      - ch
      - false
- - InFunction:
      - testing
      - start: 53
        end: 94
  - InFunctionDecorator: 1
  - InCallExpression
  - Constant: file_created
- - InFunction:
      - testing
      - start: 53
        end: 94
  - InFunctionDecorator: 1
  - InCallExpression
  - Constant: file_created
  - Attribute: emit_as
  - IdentifierReferredTo:
      - ch
      - false
- - InFunction:
      - testing
      - start: 53
        end: 94
  - AssignmentToStatement
  - IdentifierReferredTo:
      - x
      - false
- - InFunction:
      - testing
      - start: 53
        end: 94
  - AssignmentFromStatement
  - IdentifierReferredTo:
      - y
      - false
- - InFunction:
      - testing
      - start: 53
        end: 94
  - IdentifierReferredTo:
      - x
      - true
