toolchain/chidori-static-analysis/src/language/python/snapshots/chidori_static_analysis__language__python__parse__tests__report_generation_with_class.snap
---
source: chidori-static-analysis/src/language/python/parse.rs
description: "import unittest\n\nclass TestMarshalledValues(unittest.TestCase):\n    def test_addTwo(self):\n        self.assertEqual(addTwo(2), 4)\n\nunittest.TextTestRunner().run(unittest.TestLoader().loadTestsFromTestCase(TestMarshalledValues))\n"
---
- - InClass: TestMarshalledValues
- - InClass: TestMarshalledValues
  - InFunction:
      - test_addTwo
      - start: 68
        end: 129
- - InClass: TestMarshalledValues
  - InFunction:
      - test_addTwo
      - start: 68
        end: 129
  - FunctionArguments
  - IdentifierReferredTo:
      name: self
      in_scope: false
      exposed: false
- - InClass: TestMarshalledValues
  - InFunction:
      - test_addTwo
      - start: 68
        end: 129
  - InCallExpression
  - InCallExpression
  - IdentifierReferredTo:
      name: addTwo
      in_scope: false
      exposed: false
- - InClass: TestMarshalledValues
  - InFunction:
      - test_addTwo
      - start: 68
        end: 129
  - InCallExpression
  - Attribute: assertEqual
  - IdentifierReferredTo:
      name: self
      in_scope: true
      exposed: false
- - InCallExpression
  - InCallExpression
  - IdentifierReferredTo:
      name: TestMarshalledValues
      in_scope: true
      exposed: false
- - InCallExpression
  - InCallExpression
  - Attribute: loadTestsFromTestCase
  - InCallExpression
  - Attribute: TestLoader
  - IdentifierReferredTo:
      name: unittest
      in_scope: true
      exposed: false
- - InCallExpression
  - Attribute: run
  - InCallExpression
  - Attribute: TextTestRunner
  - IdentifierReferredTo:
      name: unittest
      in_scope: true
      exposed: false
